--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="like">like</string>
+    <string name="authenticate">Authenticate</string>
+    <string name="logout">LOGOUT</string>
 </resources>
